--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -3,20 +3,20 @@
 ## Action
 
 ### URL
-LinkBehaviour_80DD4EDD_A75A_8B7F_41D3_0ED416E232CB.source = http://wa.me/5548988428820
 LinkBehaviour_BB998E66_A73B_8B4D_41DC_2B2DC63F000F.source = http://wa.me/5548988428820
-LinkBehaviour_D64C60DD_A5EA_B88D_41E4_962CDB8EE9D9.source = http://wa.me/5548988428820
+LinkBehaviour_80DD4EDD_A75A_8B7F_41D3_0ED416E232CB.source = http://wa.me/5548988428820
 LinkBehaviour_DD500C7B_A5EA_8F96_41D7_3BC6FD43EB26.source = http://wa.me/5548988428820
-LinkBehaviour_DDFE1073_A5EB_7796_41E4_32A66FED10A8.source = https://g.page/r/CaCnUZ1_fwREEAg/review
+LinkBehaviour_D64C60DD_A5EA_B88D_41E4_962CDB8EE9D9.source = http://wa.me/5548988428820
 LinkBehaviour_D64C70DD_A5EA_B88D_41D4_61E4E6655618.source = https://g.page/r/CaCnUZ1_fwREEAg/review
+LinkBehaviour_DDFE1073_A5EB_7796_41E4_32A66FED10A8.source = https://g.page/r/CaCnUZ1_fwREEAg/review
 LinkBehaviour_D1990FC7_A5EA_88FD_41D7_AF76E14E518F.source = https://neurocrescer.com.br
 LinkBehaviour_D64A00DD_A5EA_B88D_41DE_D9E3FC409702.source = https://neurocrescer.com.br
 LinkBehaviour_D19B2A69_A5EA_8BB5_41D4_8DC35FCE2703.source = https://www.facebook.com/neurocrescer/
 LinkBehaviour_D64D10DD_A5EA_B88D_41E1_2CDB614263C5.source = https://www.facebook.com/neurocrescer/
-LinkBehaviour_D64FE0DD_A5EA_B88D_41DB_E4D5F503A316.source = https://www.google.com/maps/place/Neurocrescer/@-27.6223041,-48.6791125,17z/data=!3m1!4b1!4m5!3m4!1s0x952749cc97bc0001:0x44047f7f9d51a7a0!8m2!3d-27.6223089!4d-48.6769238
 LinkBehaviour_D799FE92_BBDA_8B70_41D0_54F0FC35E9C8.source = https://www.google.com/maps/place/Neurocrescer/@-27.6223041,-48.6791125,17z/data=!3m1!4b1!4m5!3m4!1s0x952749cc97bc0001:0x44047f7f9d51a7a0!8m2!3d-27.6223089!4d-48.6769238
-LinkBehaviour_DDB0FBF5_A5EB_889D_41C0_FD32DE4C9ED2.source = https://www.instagram.com/neurocrescer/
+LinkBehaviour_D64FE0DD_A5EA_B88D_41DB_E4D5F503A316.source = https://www.google.com/maps/place/Neurocrescer/@-27.6223041,-48.6791125,17z/data=!3m1!4b1!4m5!3m4!1s0x952749cc97bc0001:0x44047f7f9d51a7a0!8m2!3d-27.6223089!4d-48.6769238
 LinkBehaviour_D64F40DD_A5EA_B88D_41DF_0BF2BB747244.source = https://www.instagram.com/neurocrescer/
+LinkBehaviour_DDB0FBF5_A5EB_889D_41C0_FD32DE4C9ED2.source = https://www.instagram.com/neurocrescer/
 
 ## Media
 
@@ -41,20 +41,20 @@ Button_B015C96F_A7EE_895C_41BE_E04DF84B563D.label = SAIBA MAIS
 Button_B015C96F_A7EE_895C_41BE_E04DF84B563D_mobile.label = SAIBA MAIS
 
 ### Image
-Image_D5299605_BBEA_BB50_41DC_AE2E75025F95_mobile.path = null
 Image_D5299605_BBEA_BB50_41DC_AE2E75025F95.path = null
-Image_D5E1B771_BBED_99B0_41E5_4D9F29C046B1.path = null
+Image_D5299605_BBEA_BB50_41DC_AE2E75025F95_mobile.path = null
+Image_F5CA4555_C155_D756_41D0_B4C63778D6BB.path = null
 Image_D5E1B771_BBED_99B0_41E5_4D9F29C046B1_mobile.path = null
+Image_D5E1B771_BBED_99B0_41E5_4D9F29C046B1.path = null
 Image_D076428F_BBEE_9B51_41D8_8305CD0276F8_mobile.path = null
 Image_D076428F_BBEE_9B51_41D8_8305CD0276F8.path = null
-Image_D2535171_BBEE_99B1_41E2_1DC5258E282C.path = null
 Image_D2535171_BBEE_99B1_41E2_1DC5258E282C_mobile.path = null
+Image_D2535171_BBEE_99B1_41E2_1DC5258E282C.path = null
 Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997_mobile.path = null
 Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997.path = null
 Image_D6BC0EB1_BBEF_88B1_41CD_057821C392CA_mobile.path = null
 Image_D6BC0EB1_BBEF_88B1_41CD_057821C392CA.path = null
 Image_E762B6F8_BD3B_B8CD_41D2_C4A8F4BE5983.path = null
-Image_E4335197_BD26_B943_41E2_AD2559063F13.path = null
 Image_D076428F_BBEE_9B51_41D8_8305CD0276F8_mobile.url = skin/Image_D076428F_BBEE_9B51_41D8_8305CD0276F8_mobile_pt.png
 Image_D076428F_BBEE_9B51_41D8_8305CD0276F8.url = skin/Image_D076428F_BBEE_9B51_41D8_8305CD0276F8_pt.png
 Image_D2535171_BBEE_99B1_41E2_1DC5258E282C_mobile.url = skin/Image_D2535171_BBEE_99B1_41E2_1DC5258E282C_mobile_pt.png
@@ -67,8 +67,11 @@ Image_D6BC0EB1_BBEF_88B1_41CD_057821C392CA_mobile.url = skin/Image_D6BC0EB1_BBEF
 Image_D6BC0EB1_BBEF_88B1_41CD_057821C392CA.url = skin/Image_D6BC0EB1_BBEF_88B1_41CD_057821C392CA_pt.png
 Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997_mobile.url = skin/Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997_mobile_pt.png
 Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997.url = skin/Image_D71739CF_BBEA_88D0_41D4_E5F31C5A1997_pt.png
-Image_E4335197_BD26_B943_41E2_AD2559063F13.url = skin/Image_E4335197_BD26_B943_41E2_AD2559063F13_pt.png
 Image_E762B6F8_BD3B_B8CD_41D2_C4A8F4BE5983.url = skin/Image_E762B6F8_BD3B_B8CD_41D2_C4A8F4BE5983_pt.png
+Image_F5CA4555_C155_D756_41D0_B4C63778D6BB.url = skin/Image_F5CA4555_C155_D756_41D0_B4C63778D6BB_pt.png
+
+### Tooltip
+IconButton_F20474EF_C152_5573_41E0_0EF1DDA0B865.toolTip = Fullscreen
 
 ## Tour
 
